# vlc

./: README.md
.github/workflows/: build_linux.yml  build_win.yml
newsrc/lib/: core.c
newsrc/modules/access/: http.c
newsrc/modules/access/http/: resource.c
newsrc/modules/demux/adaptive/: adaptive.cpp
newsrc/modules/demux/adaptive/encryption/: Ap4Decrypt.cpp  Ap4Decrypt.hpp  CommonEncryption.cpp  CommonEncryption.hpp  Keyring.cpp  Keyring.hpp
newsrc/modules/demux/adaptive/http/: Chunk.h  HTTPConnection.cpp
newsrc/modules/demux/adaptive/playlist/: BaseRepresentation.cpp  BaseRepresentation.h  Segment.cpp  SegmentChunk.cpp
newsrc/modules/demux/dash/mpd/: DASHSegment.cpp  IsoffMainParser.cpp  IsoffMainParser.h
sampleapp/: CMakeLists.txt
sampleapp/src/: main.c
